Improvements in the unit tests based on sonar gate analysis